# DAWKnob_IDF_01

./: .gitignore  CMakeLists.txt  Kconfig.projbuild  README.md  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  ble_mouse.c  ble_mouse.h  esp_hidd_prf_api.c  hid_dev.c  hid_device_le_prf.c  main.c  wifi_ota.c  wifi_ota.h
